# docassemble-AkPowerOfAttorneyOverAMinorByParentOrGuardian

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/AkPowerOfAttorneyOverAMinorByParentOrGuardian/data/questions/: ak_power_of_attorney_over_a_minor_by_parent_or_guardian.yml
docassemble/AkPowerOfAttorneyOverAMinorByParentOrGuardian/data/templates/: ak_power_of_attorney_over_a_minor_by_parent_or_guardian.docx  ak_power_of_attorney_over_a_minor_by_parent_or_guardian_next_steps.docx
